<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/build_workouts"
        android:icon="@drawable/baseline_construction_24"
        android:title="@string/build_workout" />
    <item
        android:id="@+id/workout_log"
        android:icon="@drawable/ic_default_workout"
        android:title="@string/workout_log" />

</menu>
