<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Main content container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomNavigationView"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/workoutLogSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/search_view_bg"
            app:iconifiedByDefault="false"
            app:queryHint="@string/workout_log_search_hint" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/workoutLogRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_log" />
    </LinearLayout>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/nav_bar_border"
        app:itemIconSize="60dp"
        app:itemTextColor="@drawable/bottom_nav_icon_colour"
        app:itemIconTint="@drawable/bottom_nav_icon_colour"
        style="@style/MyBottomNavigationStyle"
        app:menu="@menu/nav_bar" />
</RelativeLayout>