<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_margin="12dp">

    <LinearLayout
        android:id="@+id/workoutLogDetailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtSessionDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_string"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/txtSessionProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/default_string"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>